# One-Billion-Row-Challenge-Python

./: .gitignore  LICENSE  create_measures.py  logger.py  main.py  pyproject.toml  readme.md
solutions/: constants.py  dask_solution.py  duck_db_solution.py  map_reduce_solution.py  numba_solution.py  pandas_solution.py  python_solution.py
