[tool.poetry]
name = "1br-challenge"
version = "0.1.0"
description = ""
authors = ["npavlin <np@letsnova.ru>"]
readme = "README.md"
packages = [{include = "1br_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
