[tool.poetry]
name = "1br-challenge"
version = "0.1.0"
description = ""
authors = ["npavlin <np@letsnova.ru>"]
readme = "README.md"
packages = [{include = "1br_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.2"
pandas = "^2.2.2"
duckdb = "^0.10.1"
dask = {extras = ["dataframe"], version = "^2024.4.1"}
numba = "^0.59.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
